--- a/style.css
+++ b/style.css
@@ -10,14 +10,14 @@ body{
 .left{
     background-image: linear-gradient(black,blue);
     width: 18%;
-    height: 543px;
+    height: 621px;
     float: left;
 }
 .right{
     float: left;
-    height: 543px;
+    height: 621px;
     width: 82%;
-    background-image: linear-gradient(to left,black,blue);
+    background-image: linear-gradient(to left top,black,blue);
     color: rgb(255, 255, 255);
 }
 .footer{
@@ -26,9 +26,7 @@ body{
     height: 100px;
     width: 100%;
 }
-.para{
-    margin-left: auto;
-}
+
 .login-signup{
     padding-left: 12px;
     padding-top: 29px;
@@ -36,12 +34,17 @@ body{
 .btn-1{
     border-width: 1px;
     border-radius: 35%;
-    background-color: transparent;
+    background-image: linear-gradient(to right top,black,blue);
     color: white;
     margin-left: 43px;
     padding: 12px;
     width: 83px;
+    text-decoration: none;
 }
 .btn-1:hover{
     background-image: linear-gradient(blue,black)
+}
+
+.btn-1:active{
+    background-image: linear-gradient(black,blue)
 }
